# gitagrip

./: .gitagrip.toml  .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CRASH_FIX_SUMMARY.md  CRUSH.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  EVENT_LOOP_FIX.md  GEMINI.md  GO_APP.md  LICENSE  LOGGING_GUIDE.md  MILESTONE_SUMMARY.md  Makefile  PERFORMANCE_FIX.md  README.md  STRATEGY.md  crush.json  feature_proposal.md  go.mod  go.sum  install.sh  landscape.md  lol  main.go  main.go.bak  main.go.bak2  package.json  plan.md  repomix-output.xml  test_new_architecture.sh
.ai/: E2E_TESTING_GUIDE.md  TESTING_WITH_TMUX.md
.claude/agents/: systems-architect-consultant.md
.github/workflows/: release.yml  test.yml
.gocache/: trim.txt
.gocache/00/: 005a8fe3c28c731259be3deb96c03e916b323d23c4e4f5a273dc4dc6bfec639e-a  00fb1879728d7871a50a85edbcf8f21177f6a9c50a5f3759c231af5e706844dd-a
.gocache/01/: 0111712bb4c61f85e206f1812379f682daff951fbd1a8504c56201c0b7b80cad-a  011dd58798a78e521cd729a42945e1d1a7fa6b9b79a58e4e4abc00a313f5d9e5-a  013ec03f6ad7960f7d285eddeed5ac1b7260b06991c1396e32d1b66b38c3e65e-d  019159d39e303d86175328325095ea4be92e8a88a30143c29143c4d8aa724b40-a  01918af575430ecba301b16441a73f39a0dabcdf01aa3f7b00e78da233a368ac-a  0191cde52b9331dc6e67edb1d6be734ac326d57f843e095e99e0c26811384e19-a  019d1a9f6caf3d9c7a776169c4472416342a37f397de9be8e2602051924ff119-d  01a4cae924271393b7ad160efb970748d00d61419176c34de1807e6fddcd9e7b-d  01dbbd34cadeea18d9a602db3f8b4cf9f4383fe1d45951ccab3e66a9a7a5082f-a
.gocache/02/: 02264a61b1b247f11c34384a951e85ff35d2ff28545eb99e2946eade48cc2852-d  (+4 more)
crates/app/: Cargo.toml
crates/app/src/: app.rs  git.rs  lib.rs  main.rs  main_new.rs  scan.rs
crates/app/src/adapters/: discovery.rs  git.rs  mod.rs  persistence.rs
crates/app/src/services/: app_service.rs
crates/app/src/tui/: mod.rs  model.rs  update.rs  view.rs
crates/app/tests/: new_architecture_test.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/app/: commands.rs  mod.rs  queries.rs
crates/core/src/domain/: commit.rs  events.rs  mod.rs  repo.rs
crates/core/src/ports/: discovery.rs  git.rs  mod.rs  persistence.rs  time.rs
e2e/: README.md  auto_grouping_test.go  config_test.go  discovery_test.go  driver_unix_test.go  exit_test.go  filter_test.go  fixtures_git_test.go  gitops_test.go  go.mod  go.mod.e2e  go.sum.e2e  group_reorder_test.go  help_test.go  lazygit_integration_test.go  mock_gitops_test.go  navigation_test.go  pager_test.go  popup_overlay_test.go  run_tests.sh  selection_test.go  sort_test.go  stress_test.sh  testmain_test.go  tui_test.go
src/: app.rs  cli.rs  config.rs  git.rs  lib.rs  main.rs  scan.rs
tests/: comprehensive_integration_test.rs  debug_group_creation.rs  debug_group_selection_issue.rs  debug_main_app_flow.rs  debug_selection_highlighting.rs  debug_ui_index_mapping.rs  debug_user_issues.rs  integration_test.rs  m1_config_cli_test.rs  m2_repository_discovery_test.rs  m3_git_status_test.rs  m4_modal_architecture_test.rs  m4_phase3_group_management_test.rs  m4_simplified_organize_test.rs  scrolling_test.rs  test_move_functionality.rs  unit_tests.rs  validate_selection_fix.rs  vim_navigation_test.rs
(+848 files in other folders)
