[package]
name = "yarg"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git
git2 = "0.19"

# FS scan
walkdir = "2.4"

# Concurrency
crossbeam-channel = "0.5"
rayon = "1.8"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
serde_with = "3.4"
clap = { version = "4.4", features = ["derive"] }

# Errors/logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
