[workspace]
members = [
    "crates/core",
    "crates/app",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies shared across crates
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Dev dependencies
tempfile = "3.8"
