[package]
name = "gitagrip"
version = "0.1.0"
edition = "2021"
description = "A fast terminal UI for discovering, grouping, and inspecting multiple Git repositories"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[[bin]]
name = "gitagrip"
path = "src/main.rs"

[dependencies]
# Workspace crates
gitagrip-core = { path = "../core" }

# Workspace dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Git
git2 = "0.19"

# FS scan
walkdir = "2.4"

# Config
toml = "0.8"
directories = "5.0"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }

# Concurrency (legacy - will be removed in later phases)
crossbeam-channel = "0.5"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
git2 = "0.19"